--- a/ass3.html
+++ b/ass3.html
@@ -1,3 +1,4 @@
+<!--Question 1 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -36,5 +37,76 @@
     <td>91.3</td>
   </tr>
 </table>
+</body>
+</html>
+
+
+<!--Question 2 -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+  <form>
+  <label for="name">Full name:</label><br>
+  <input type="text" id="name" ><br>
+  <label for="email">Email:</label><br>
+  <input type="text" id="email"><br>
+  <label for="password">Password:</label><br>
+  <input type="password" id="password"><br>
+  <label>Gender:</label><br>
+  <label><input type="radio" name="gender">Male</label>
+  <label><input type="radio" name="gender">Female</label>
+  <label><input type="radio" name="gender">Others</label><br>
+  <textarea name="" id="" rows="10" cols="30">Bio</textarea><br><br>
+  <input type="submit" value="Register">
+</form>
+</body>
+</html>
+
+
+<!--Question 3 -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h2>Q3. Semantic Blog Layout</h2>
+  <header>
+    <h1>My Blog</h1>
+    <nav>
+      <a href="#">Home</a> |
+      <a href="#">Articles</a> |
+      <a href="#">About</a> |
+      <a href="#">Contact</a>
+    </nav>
+  </header>
+
+  <main>
+    <section>
+      <article>
+        <h2>First Article</h2>
+        <p>This is the content of the first article.</p>
+      </article>
+      <article>
+        <h2>Second Article</h2>
+        <p>This is the content of the second article.</p>
+      </article>
+      <article>
+        <h2>Third Article</h2>
+        <p>This is the content of the third article.</p>
+      </article>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 My Blog. All rights reserved.</p>
+  </footer>
 </body>
 </html>
